tests/neg/i7529.scala
given fooOps: [A](a: A) with

  @nonsense    // error: not found: nonsense
  def foo = ???